[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfEX -p pytester --strict-markers"
testpaths = [
    "tests/python/*_tests.py",
]

[project]
name = "ezkl_lib"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]